# ktane

./: .gitignore  Cargo.toml  README.md  WhosOnFirst.txt  build.rs
app/: build.gradle
app/src/main/: AndroidManifest.xml
src/: app.rs  lib.rs  main.rs
